--- a/.classpath
+++ b/.classpath
@@ -26,5 +26,6 @@
 	</classpathentry>
 	<classpathentry kind="lib" path="D:/apache-tomcat-9.0.11/lib/servlet-api.jar"/>
 	<classpathentry kind="con" path="org.testng.TESTNG_CONTAINER"/>
+	<classpathentry kind="src" path="/mySeleniumProject"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
